fixing filtering only by active