@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,8 +25,7 @@ public class RecordService {
 
     public List<Record> getPaginatedRecords(User user, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
-        return recordRepository.findAllByUserIdOrderByDateDesc(user.getId(), pageable).stream()
-                .filter(record -> record.isRecordActive()).collect(Collectors.toList());
+        return recordRepository.findActiveRecordsByUserId(user.getId(), pageable).stream().toList();
     }
 
     public void deleteRecord(long recordId) {
@@ -37,7 +35,7 @@ public class RecordService {
     }
 
     public long getTotalRecords() {
-        return recordRepository.count();
+        return recordRepository.countActiveRecords();
     }
 
     public Record createAndSaveNewRecord(ResponseEntity<OperationResponseDto> result, Operation operation) {
